crates/nash-codegen/src/build/tests/source/snapshots/nash_codegen__build__tests__source__builtins__dangling_trace_expect_in_trace.snap
---
source: crates/nash-codegen/src/build/tests/source/builtins.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nmain : unit\nmain = trace \"foo\" (trace \"bar\" (assert True))\n"
---
--- core
let message#4 : string = "foo" in
let message#5 : string = "bar" in
let message#6 : string = "assertion failed" in
let fromString#2 : string -> string = \value#3 : string -> value#3 in
let main#1 : unit = trace (fromString#2 message#4) in trace (fromString#2 message#5) in case@Bool true of
  True -> ()
  False -> trace message#6 in error in
main#1
--- uplc
(program 1.1.0
  [(lam message_4
    [(lam message_5
      [(lam message_6
        [(lam fromString_2
          [(lam main_1 main_1)
            (force
              [[(force (builtin trace)) [fromString_2 message_4]]
                (delay
                  (force
                    [[(force (builtin trace)) [fromString_2 message_5]]
                      (delay
                        (case
                          (con bool True)
                          (force [[(force (builtin trace)) message_6] (delay (error))])
                          (con unit ())))]))])])
          (lam value_3 value_3)])
        (con string "assertion failed")])
      (con string "bar")])
    (con string "foo")])
--- result
(con unit ())
--- logs
["foo", "bar"]
--- budget
cpu: 727096, memory: 3964
