crates/nash-codegen/src/build/tests/source/snapshots/nash_codegen__build__tests__source__builtins__data_map_rejects_malformed_value.snap
---
source: crates/nash-codegen/src/build/tests/source/builtins.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nimport Data exposing (validate)\ndecoded : Map Bytes (List Int)\ndecoded = validate (Map [mkPairData (B #\"aa\") (List [B #\"bb\"])])\nmain = nullList (unMapData decoded)\n"
---
--- unoptimized Core
let applyForward#11 : 'erased -> ('erased -> 'erased) -> 'erased = \x#16 : 'erased (f#17 : 'erased -> 'erased) -> f#17 x#16 in
letrec
  mapList#12 : ('erased -> pair Data Data) -> list 'erased -> list (pair Data Data) [static [0]] = \(f#18 : 'erased -> pair Data Data) values#19 : list 'erased -> let match#22 : list 'erased = values#19 in
  case@List match#22 of
    Nil -> (con (list (pair data data)) [])
    Cons field#23 field#24 -> let first#20 : 'erased = field#23 in
    let rest#21 : list 'erased = field#24 in
    mkCons (f#18 first#20) (mapList#12 f#18 rest#21)
in
let validate#28 : Data -> Bytes = \value#33 : Data -> let candidate#34 : Bytes = (\coerce#36 : Data -> coerce#36) value#33 in
let destruct#35 : bytes = unBData candidate#34 in
candidate#34 in
letrec
  mapList#39 : ('erased -> Data) -> list 'erased -> list Data [static [0]] = \(f#42 : 'erased -> Data) values#43 : list 'erased -> let match#46 : list 'erased = values#43 in
  case@List match#46 of
    Nil -> (con (list data) [])
    Cons field#47 field#48 -> let first#44 : 'erased = field#47 in
    let rest#45 : list 'erased = field#48 in
    mkCons (f#42 first#44) (mapList#39 f#42 rest#45)
in
let validate#40 : Data -> Int = \value#49 : Data -> let candidate#50 : Int = (\coerce#52 : Data -> coerce#52) value#49 in
let destruct#51 : int = unIData candidate#50 in
candidate#50 in
let validate#29 : Data -> List Data = \value#37 : Data -> let candidate#38 : List Data = (\coerce#41 : Data -> coerce#41) value#37 in
applyForward#11 (applyForward#11 (applyForward#11 candidate#38 unListData) (mapList#39 validate#40)) listData in
let pairValidate#13 : pair Data Data -> pair Data Data = \arg#25 : pair Data Data -> let match#30 : pair Data Data = arg#25 in
case@Pair match#30 of
  Pair field#31 field#32 -> let key#26 : Data = field#31 in
  let value#27 : Data = field#32 in
  mkPairData (validate#28 key#26) (validate#29 value#27) in
let validate#3 : Data -> Map Data Data = \value#9 : Data -> let candidate#10 : Map Data Data = (\coerce#14 : Data -> coerce#14) value#9 in
applyForward#11 (applyForward#11 (applyForward#11 candidate#10 unMapData) (mapList#12 pairValidate#13)) mapData in
let fromBytes#6 : bytes -> bytes = \value#15 : bytes -> value#15 in
let decoded#2 : Map Bytes (List Int) = validate#3 ((\field#4 : list (pair Data Data) -> mapData field#4) (mkCons (mkPairData ((\field#5 : bytes -> bData field#5) (fromBytes#6 (con bytestring #aa))) ((\field#7 : list Data -> listData field#7) (mkCons ((\field#8 : bytes -> bData field#8) (fromBytes#6 (con bytestring #bb))) (con (list data) [])))) (con (list (pair data data)) []))) in
let main#1 : bool = nullList (unMapData decoded#2) in
main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam applyForward_11
    [(lam mapList_12
      [(lam validate_28
        [(lam mapList_39
          [(lam validate_40
            [(lam validate_29
              [(lam pairValidate_13
                [(lam validate_3
                  [(lam fromBytes_6
                    [(lam decoded_2
                      [(lam main_1 main_1)
                        [(force (builtin nullList)) [(builtin unMapData) decoded_2]]])
                      [validate_3
                        [(lam field_4 [(builtin mapData) field_4])
                          [[(force (builtin mkCons))
                            [[(builtin mkPairData)
                              [(lam field_5 [(builtin bData) field_5]) [fromBytes_6 (con bytestring #aa)]]]
                              [(lam field_7 [(builtin listData) field_7])
                                [[(force (builtin mkCons))
                                  [(lam field_8 [(builtin bData) field_8]) [fromBytes_6 (con bytestring #bb)]]]
                                  (con (list data) [])]]]]
                            (con (list (pair data data)) [])]]]])
                    (lam value_15 value_15)])
                  (lam value_9
                    [(lam candidate_10
                      [[applyForward_11
                        [[applyForward_11 [[applyForward_11 candidate_10] (builtin unMapData)]]
                          [mapList_12 pairValidate_13]]]
                        (builtin mapData)])
                      [(lam coerce_14 coerce_14) value_9]])])
                (lam arg_25
                  [(lam match_30
                    (case
                      match_30
                      (lam field_31
                        (lam field_32
                          [(lam key_26
                            [(lam value_27
                              [[(builtin mkPairData) [validate_28 key_26]] [validate_29 value_27]])
                              field_32])
                            field_31]))))
                    arg_25])])
              (lam value_37
                [(lam candidate_38
                  [[applyForward_11
                    [[applyForward_11 [[applyForward_11 candidate_38] (builtin unListData)]]
                      [mapList_39 validate_40]]]
                    (builtin listData)])
                  [(lam coerce_41 coerce_41) value_37]])])
            (lam value_49
              [(lam candidate_50
                [(lam destruct_51 candidate_50) [(builtin unIData) candidate_50]])
                [(lam coerce_52 coerce_52) value_49]])])
          (lam f_42
            (lam values_43
              [[(lam self_53 [self_53 self_53])
                (lam self_53
                  (lam values_43
                    [(lam match_46
                      (case
                        match_46
                        (lam field_47
                          (lam field_48
                            [(lam first_44
                              [(lam rest_45
                                [[(force (builtin mkCons)) [f_42 first_44]] [[self_53 self_53] rest_45]])
                                field_48])
                              field_47]))
                        (con (list data) [])))
                      values_43]))]
                values_43]))])
        (lam value_33
          [(lam candidate_34
            [(lam destruct_35 candidate_34) [(builtin unBData) candidate_34]])
            [(lam coerce_36 coerce_36) value_33]])])
      (lam f_18
        (lam values_19
          [[(lam self_54 [self_54 self_54])
            (lam self_54
              (lam values_19
                [(lam match_22
                  (case
                    match_22
                    (lam field_23
                      (lam field_24
                        [(lam first_20
                          [(lam rest_21
                            [[(force (builtin mkCons)) [f_18 first_20]] [[self_54 self_54] rest_21]])
                            field_24])
                          field_23]))
                    (con (list (pair data data)) [])))
                  values_19]))]
            values_19]))])
    (lam x_16 (lam f_17 [f_17 x_16]))])
--- optimized Core
let applyForward#55 : 'erased -> ('erased -> 'erased) -> 'erased = \x#53 : 'erased (f#54 : 'erased -> 'erased) -> f#54 x#53 in
let anf#119 : list (pair Data Data) = applyForward#55 (con data (Map [(B #aa, List [B #bb])])) unMapData in
let anf#120 : (list (pair Data Data) -> list (pair Data Data)) -> list (pair Data Data) = applyForward#55 anf#119 in
let anf#122 : list (pair Data Data) = anf#120 (\values#58 : list 'erased -> letrec
  worker#108 : list 'erased -> list (pair Data Data) [static []] = \values#107 : list 'erased -> case@List values#107 of
    Nil -> (con (list (pair data data)) [])
    Cons field#60 field#61 -> let anf#109 : pair Data Data = case@Pair field#60 of
      Pair field#88 field#89 -> let destruct#67 : bytes = unBData field#88 in
      let anf#113 : list Data = applyForward#55 field#89 unListData in
      let anf#114 : (list Data -> list Data) -> list Data = applyForward#55 anf#113 in
      let anf#116 : list Data = anf#114 (\values#71 : list 'erased -> letrec
        worker#106 : list 'erased -> list Data [static []] = \values#105 : list 'erased -> case@List values#105 of
          Nil -> (con (list data) [])
          Cons field#73 field#74 -> let destruct#80 : int = unIData field#73 in
          let anf#112 : list Data = worker#106 field#74 in
          mkCons field#73 anf#112
      in
      worker#106 values#71) in
      let anf#118 : Data = applyForward#55 anf#116 listData in
      mkPairData field#88 anf#118 in
    let anf#110 : list (pair Data Data) = worker#108 field#61 in
    mkCons anf#109 anf#110
in
worker#108 values#58) in
let decoded#103 : Map Bytes (List Int) = applyForward#55 anf#122 mapData in
let anf#132 : list (pair Bytes (List Int)) = unMapData decoded#103 in
nullList anf#132
--- optimized UPLC
(program 1.1.0
  [(lam builtin_38
    [(lam builtin_39
      [(lam applyForward_7
        [(lam anf_8
          [(lam anf_9
            [(lam anf_35
              [(lam decoded_36
                [(lam anf_37 [builtin_38 anf_37]) [(builtin unMapData) decoded_36]])
                [[applyForward_7 anf_35] (builtin mapData)]])
              [anf_9
                (lam values_10
                  [(lam worker_34 [worker_34 values_10])
                    [(lam self_11 [self_11 self_11])
                      (lam self_12
                        (lam values_13
                          (case
                            values_13
                            (lam field_14
                              (lam field_15
                                [(lam anf_32
                                  [(lam anf_33 [[builtin_39 anf_32] anf_33]) [[self_12 self_12] field_15]])
                                  (case
                                    field_14
                                    (lam field_16
                                      (lam field_17
                                        [(lam destruct_18
                                          [(lam anf_19
                                            [(lam anf_20
                                              [(lam anf_30
                                                [(lam anf_31 [[(builtin mkPairData) field_16] anf_31])
                                                  [[applyForward_7 anf_30] (builtin listData)]])
                                                [anf_20
                                                  (lam values_21
                                                    [(lam worker_29 [worker_29 values_21])
                                                      [(lam self_22 [self_22 self_22])
                                                        (lam self_23
                                                          (lam values_24
                                                            (case
                                                              values_24
                                                              (lam field_25
                                                                (lam field_26
                                                                  [(lam destruct_27
                                                                    [(lam anf_28 [[builtin_39 field_25] anf_28]) [[self_23 self_23] field_26]])
                                                                    [(builtin unIData) field_25]]))
                                                              (con (list data) []))))]])]])
                                              [applyForward_7 anf_19]])
                                            [[applyForward_7 field_17] (builtin unListData)]])
                                          [(builtin unBData) field_16]])))]))
                            (con (list (pair data data)) []))))]])]])
            [applyForward_7 anf_8]])
          [[applyForward_7 (con data (Map [(B #aa, List [B #bb])]))] (builtin unMapData)]])
        (lam x_5 (lam f_6 [f_6 x_5]))])
      (force (builtin mkCons))])
    (force (builtin nullList))])
--- result
error: Runtime(MalFormedData(ByteString([187])))
--- logs
[]
--- budget
cpu: 3551532, memory: 20420
